# MCP-Explorer

./: .gitignore  README.md  config.py  host-ollama.py  host.py  main.py  pyproject.toml  requirements.txt
LLM_examples/: Deepseek.py  Gemini.py  HuggingFace.py  Ollama.py  OpenAI(compatible).py  Qwen(OpenAI).py  Qwen.py
client/: sse_client.py  stdio_client.py
client_examples/: sse_client.py  stdio_client.py  streamable-http_client.py
examples/: Gemini.py  Ollama.py  Qwen.py  deepseek.py
my_servers/: AlienCom.py  BraveSearch.py  CatCom.py  timetools.py
my_servers/TimeServer/: pyproject.toml  timetools.py
servers/TimeServer/: README.md  env_calculate_expression_mcp.py  timetools.py
tests/: Qwen.py
