[project]
name = "mcp-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.6.0",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.9.0",
    "audioop-lts==0.2.1",
    "audioread==3.0.1",
    "av==14.3.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "decorator==5.2.1",
    "decord==0.6.0",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "google-auth==2.39.0",
    "google-genai==1.11.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "markupsafe==3.0.2",
    "mcp==1.6.0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "networkx==3.4.2",
    "numba==0.61.2",
    "numpy==2.2.4",
    "ollama==0.4.8",
    "openai==1.75.0",
    "packaging==24.2",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "pooch==1.8.2",
    "psutil==7.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "qwen-omni-utils==0.0.4",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==78.1.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "sse-starlette==2.2.1",
    "standard-aifc==3.13.0",
    "standard-chunk==3.13.0",
    "standard-sunau==3.13.0",
    "starlette==0.46.2",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "websockets==15.0.1",
    "win32-setctime==1.2.0",
    "yacs==0.1.8",
]
